add depenca do rabbitMQ

--- a/mscartoes/src/main/resources/application.yml
+++ b/mscartoes/src/main/resources/application.yml
@@ -13,6 +13,10 @@ eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
+mq:
+  queues:
+    emissao-cartoes
+
 management:
   endpoints:
     web:
