--- a/msAvaliadorCredito/src/main/resources/application.yml
+++ b/msAvaliadorCredito/src/main/resources/application.yml
@@ -1,16 +1,26 @@
-spring:
-  application:
-    name: msAvaliadorCredito
+#spring:
+#  application:
+#    name: msAvaliadorCredito
+#  rabbitmq:
+#    host: localhost
+#    port: 5672
+#    username: guest
+#    password: guest
+#
+#server:
+#  port: 0
+#
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://cursoms-eureka-user:ecok-usr-eeuramssur@localhost:8761/eureka
+#  instance:
+#    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+#
+#mq:
+#  queues:
+#    emissao-cartoes: emissao-cartoes
 
-server:
-  port: 0
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://cursoms-eureka-user:ecok-usr-eeuramssur@localhost:8761/eureka
-  instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 #management:
 #  endpoints:
@@ -21,3 +31,32 @@ eureka:
 #logging:
 #  file:
 #    name: ./logs/log-file.log
+
+spring:
+  application:
+    name: msAvaliadorCredito
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
+server:
+  port: 0
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://cursoms-eureka-user:ecok-usr-eeuramssur@localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    lease-renewal-interval-in-seconds: 10        # envia heartbeat a cada 10s
+    lease-expiration-duration-in-seconds: 30     # expira em 30s se não houver heartbeat
+    prefer-ip-address: true                      # usa IP em vez do hostname (evita conflitos)
+
+mq:
+  queues:
+    emissao-cartoes: emissao-cartoes
+
