--- a/mscartoes/src/main/resources/application.yml
+++ b/mscartoes/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: mscartoes
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 server:
   port: 0
@@ -8,14 +13,14 @@ server:
 eureka:
   client:
     service-url:
-      #defaultZone: http://cursoms-eureka-user:ecok-usr-eeuramssur@localhost:8761/eureka
       defaultZone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 mq:
   queues:
-    emissao-cartoes
+    emissao-cartoes: emissao-cartoes
+
 
 management:
   endpoints:
