--- a/msAvaliadorCredito/src/main/resources/application.yml
+++ b/msAvaliadorCredito/src/main/resources/application.yml
@@ -1,37 +1,3 @@
-#spring:
-#  application:
-#    name: msAvaliadorCredito
-#  rabbitmq:
-#    host: localhost
-#    port: 5672
-#    username: guest
-#    password: guest
-#
-#server:
-#  port: 0
-#
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: http://cursoms-eureka-user:ecok-usr-eeuramssur@localhost:8761/eureka
-#  instance:
-#    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-#
-#mq:
-#  queues:
-#    emissao-cartoes: emissao-cartoes
-
-
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: '*'
-#
-#logging:
-#  file:
-#    name: ./logs/log-file.log
-
 spring:
   application:
     name: msAvaliadorCredito
@@ -47,7 +13,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://cursoms-eureka-user:ecok-usr-eeuramssur@localhost:8761/eureka
+      defaultZone: http://cursoms-eureka-user:M1c9j812@localhost:8761/eureka
     register-with-eureka: true
     fetch-registry: true
   instance:
@@ -59,4 +25,14 @@ eureka:
 mq:
   queues:
     emissao-cartoes: emissao-cartoes
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+
+logging:
+  file:
+    name: ./logs/log-file.log
 
