--- a/mscloudgateway/src/main/resources/application.yml
+++ b/mscloudgateway/src/main/resources/application.yml
@@ -21,4 +21,4 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://cursoms-eureka-user:M1c9j812@localhost:8761/eureka
