--- a/msAvaliadorCredito/Dockerfile
+++ b/msAvaliadorCredito/Dockerfile
@@ -6,5 +6,8 @@ RUN ./mvnw clean package -DskipTests
 FROM openjdk:17
 WORKDIR /app
 COPY --from=build /app/target/*-SNAPSHOT.jar app.jar
-EXPOSE 8761
+
+ARG RABBITMQ_SERVER=rabbitmq-host
+ARG EUREKA_SERVER=localhost
+
 ENTRYPOINT ["java", "-jar", "app.jar"]
