--- a/mscartoes/src/main/resources/application.yml
+++ b/mscartoes/src/main/resources/application.yml
@@ -2,7 +2,9 @@ spring:
   application:
     name: mscartoes
   rabbitmq:
-    host: localhost
+    host: ${RABBITMQ_SERVER}
+    #    host: rabbitmq:4-management
+    #    host: localhost
     port: 5672
     username: guest
     password: guest
@@ -13,7 +15,8 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://cursoms-eureka-user:M1c9j812@localhost:8761/eureka
+      defaultZone: http://cursoms-eureka-user:M1c9j812@${EUREKA_SERVER}:8761/eureka
+  #      defaultZone: http://cursoms-eureka-user:M1c9j812@cursoms-eureka:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
