--- a/mscloudgateway/Dockerfile
+++ b/mscloudgateway/Dockerfile
@@ -6,5 +6,9 @@ RUN ./mvnw clean package -DskipTests
 FROM openjdk:17
 WORKDIR /app
 COPY --from=build /app/target/*-SNAPSHOT.jar app.jar
-EXPOSE 8761
+
+ARG EUREKA_SERVER=localhost
+ARG KEYCLOAK_SERVER=localhost
+ARG KEYCLOAK_PORT=8081
+
 ENTRYPOINT ["java", "-jar", "app.jar"]
