--- a/eurekaserver/Dockerfile
+++ b/eurekaserver/Dockerfile
@@ -1,10 +1,11 @@
 FROM maven:3.9.7-amazoncorretto-17 as build
 WORKDIR /app
 COPY . .
-RUN ./mvnw clean package -DskipTests
+RUN mvn clean package -DskipTests
 
 FROM openjdk:17
 WORKDIR /app
-COPY --from=build /app/target/*-SNAPSHOT.jar app.jar
+COPY --from=build ./app/target/*.jar ./app.jar
 EXPOSE 8761
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT java -jar app.jar
+
