--- a/msAvaliadorCredito/Dockerfile
+++ b/msAvaliadorCredito/Dockerfile
@@ -1,13 +1,14 @@
 FROM maven:3.9.7-amazoncorretto-17 as build
 WORKDIR /app
 COPY . .
-RUN ./mvnw clean package -DskipTests
+RUN mvn clean package -DskipTests
 
 FROM openjdk:17
 WORKDIR /app
-COPY --from=build /app/target/*-SNAPSHOT.jar app.jar
+COPY --from=build ./app/target/*.jar ./app.jar
 
 ARG RABBITMQ_SERVER=rabbitmq-host
-ARG EUREKA_SERVER=localhost
+ARG EUREKSERVER=localhost
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT java -jar app.jar
+
