--- a/mscartoes/src/main/resources/application-dev.yml
+++ b/mscartoes/src/main/resources/application-dev.yml
@@ -1,8 +1,10 @@
 spring:
   application:
     name: mscartoes
+  profile:
+    active: local
   rabbitmq:
-    host: ${RABBITMQ_SERVER}
+    host: localhost
     port: 5672
     username: guest
     password: guest
@@ -13,7 +15,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://cursoms-eureka-user:M1c9j812@${EUREKA_SERVER}:8761/eureka
+      defaultZone: http://cursoms-eureka-user:M1c9j812@localhost:8761/eureka
   #      defaultZone: http://cursoms-eureka-user:M1c9j812@cursoms-eureka:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
