--- a/mscloudgateway/Dockerfile
+++ b/mscloudgateway/Dockerfile
@@ -1,14 +1,15 @@
 FROM maven:3.9.7-amazoncorretto-17 as build
 WORKDIR /app
 COPY . .
-RUN ./mvnw clean package -DskipTests
+RUN mvn clean package -DskipTests
 
 FROM openjdk:17
 WORKDIR /app
-COPY --from=build /app/target/*-SNAPSHOT.jar app.jar
+COPY --from=build ./app/target/*.jar ./app.jar
 
-ARG EUREKA_SERVER=localhost
+
+ARG EUREKSERVER=localhost
 ARG KEYCLOAK_SERVER=localhost
 ARG KEYCLOAK_PORT=8081
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT java -jar app.jar
